refactor: remove CreateWebtoonListener and add TestDataSourceConfig for improved test database configuration